Src/objects/Student__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>