Src/objects/Student__c/fields/College_Fees__c.field-meta.xml
<CustomField>
    <fullName>College_Fees__c</fullName>
    <label>College Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>