Src/objects/Student__c/fields/Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Year__c</fullName>
    <label>Current Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Year</fullName>
            </value>
            <value>
                <fullName>2nd Year</fullName>
            </value>
            <value>
                <fullName>3rd Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>