Src/objects/Student__c/fields/Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time__c</fullName>
    <description>Student records filled Date and Time</description>
    <label>Date and Time</label>
    <type>DateTime</type>
</CustomField>