Src/objects/Student__c/fields/Donation_Ammount__c.field-meta.xml
<CustomField>
    <fullName>Donation_Ammount__c</fullName>
    <label>Donation Ammount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>