Src/objects/Student__c/fields/Exame_fees__c.field-meta.xml
<CustomField>
    <fullName>Exame_fees__c</fullName>
    <label>Exame fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>