Src/objects/Student__c/fields/Father_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Father_Mobile_Number__c</fullName>
    <label>Father Mobile Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>