Src/objects/Student__c/fields/HomePhone__c.field-meta.xml
<CustomField>
    <fullName>HomePhone__c</fullName>
    <label>HomePhone</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>