Src/objects/Student__c/fields/Indian_Student__c.field-meta.xml
<CustomField>
    <fullName>Indian_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indian Student</label>
    <type>Checkbox</type>
</CustomField>