Src/objects/Student__c/fields/Mobile_Number_Bank__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number_Bank__c</fullName>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>