Src/objects/Student__c/fields/Nick_Name__c.field-meta.xml
<CustomField>
    <fullName>Nick_Name__c</fullName>
    <label>Nick Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>