Src/objects/Student__c/fields/Overall_Grade__c.field-meta.xml
<CustomField>
    <fullName>Overall_Grade__c</fullName>
    <label>Overall Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A+</fullName>
                <default>true</default>
                <label>A+</label>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B+</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C+</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>