Src/objects/Student__c/fields/Pending_Fees_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pending_Fees_Amount__c</fullName>
    <label>Pending Fees Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>