Src/objects/Student__c/fields/PG_percentage__c.field-meta.xml
<CustomField>
    <fullName>PG_percentage__c</fullName>
    <label>PG percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>