Src/objects/Student__c/fields/Roll_Number__c.field-meta.xml
<CustomField>
    <fullName>Roll_Number__c</fullName>
    <businessOwnerUser>abhishek.girhare@fexle.com.training.staging</businessOwnerUser>
    <label>Roll Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>