Src/objects/Student__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>Student Serial number</description>
    <displayFormat>A-{0000}</displayFormat>
    <label>Serial Number</label>
    <type>AutoNumber</type>
</CustomField>