Src/objects/Student__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Madhya Pradesh</fullName>
                <default>true</default>
                <label>Madhya Pradesh</label>
            </value>
            <value>
                <fullName>Rajasthan</fullName>
            </value>
            <value>
                <fullName>Uttar Pradesh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>