Src/objects/Student__c/fields/Student_Details__c.field-meta.xml
<CustomField>
    <fullName>Student_Details__c</fullName>
    <label>Student Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>