Src/objects/Student__c/fields/Student_Home_Location__c.field-meta.xml
<CustomField>
    <fullName>Student_Home_Location__c</fullName>
    <label>Student Home Location</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>