Src/objects/Student__c/fields/Student_linkdin_Id__c.field-meta.xml
<CustomField>
    <fullName>Student_linkdin_Id__c</fullName>
    <label>Student linkdin Id</label>
    <type>Url</type>
</CustomField>