Src/objects/Student__c/fields/Student_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Student_Phone_Number__c</fullName>
    <inlineHelpText>Enter student Mobile Number</inlineHelpText>
    <label>Student Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>