Src/objects/Student__c/fields/X1st_Sem_Subjects_in_which_Back__c.field-meta.xml
<CustomField>
    <fullName>X1st_Sem_Subjects_in_which_Back__c</fullName>
    <label>1st Sem Subjects in which Back</label>
    <length>20</length>
    <type>Text</type>
</CustomField>