Src/objects/Student__c/fields/X3rd_Sem_Back__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Sem_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3rd Sem Back</label>
    <type>Checkbox</type>
</CustomField>