Src/objects/Student__c/fields/X3rd_Sem_Subjects_in_which_Back__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Sem_Subjects_in_which_Back__c</fullName>
    <label>3rd Sem Subjects in which Back</label>
    <length>15</length>
    <type>Text</type>
</CustomField>