Src/objects/Student__c/fields/X4th_Sem_Back__c.field-meta.xml
<CustomField>
    <fullName>X4th_Sem_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>4th Sem Back</label>
    <type>Checkbox</type>
</CustomField>