Src/objects/Student__c/fields/X4th_Sem_Percentage__c.field-meta.xml
<CustomField>
    <fullName>X4th_Sem_Percentage__c</fullName>
    <label>4th Sem Percentage</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>