Src/objects/Student__c/recordTypes/Registrar.recordType-meta.xml
<RecordType>
    <fullName>Registrar</fullName>
    <active>true</active>
    <description>Registrar Records</description>
    <label>Registrar</label>
</RecordType>