Src/objects/Student__c/recordTypes/Student.recordType-meta.xml
<RecordType>
    <fullName>Student</fullName>
    <active>true</active>
    <description>Student Details</description>
    <label>Student</label>
</RecordType>