Src/objects/Student__c/recordTypes/Teacher.recordType-meta.xml
<RecordType>
    <fullName>Teacher</fullName>
    <active>true</active>
    <description>Teacher Records</description>
    <label>Teacher</label>
</RecordType>